--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.19.4",
+    "react-bootstrap": "^1.0.0-beta.12",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
